<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:gravity="center_horizontal"
android:orientation="vertical"
tools:context="com.example.ensmr.enimbenevolatapp.MembreRegistration">


<include layout="@layout/toolbar" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/edit_text_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView14"
                    android:src="@drawable/commande_man"
                    android:layout_margin="4dp"
                    android:layout_gravity="center" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fullname_registerlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/fullname_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nom"
                        android:inputType="textCapWords|text"
                        android:singleLine="true" />


                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView15"
                    android:src="@drawable/coordonnee_password"
                    android:layout_margin="4dp"
                    android:layout_gravity="center" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_registerlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mot_de_passe"
                        android:inputType="textPassword"
                        android:singleLine="true" />


                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView16"
                    android:src="@drawable/coordonnee_phone"
                    android:layout_margin="4dp"
                    android:layout_gravity="center" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/telephone_registerlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/telephone_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/telephone"
                        android:singleLine="true"
                        android:inputType="phone" />


                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView27"
                    android:src="@drawable/commande_choice"
                    android:layout_margin="4dp"
                    android:layout_gravity="center" />

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/spinner1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/profession"
                    app:ms_arrowColor="@color/gris"
                    app:ms_arrowSize="16dp"
                    app:ms_floatingLabelColor="@color/colorAccent"
                    app:ms_floatingLabelText="@string/profession"
                    app:ms_hint="@string/profession"
                    app:ms_multiline="true"
                    android:spinnerMode="dropdown"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView30"
                    android:src="@drawable/commande_choice"
                    android:layout_margin="4dp"
                    android:layout_gravity="center" />

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/spinner2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/promo"
                    app:ms_arrowColor="@color/gris"
                    app:ms_arrowSize="16dp"
                    app:ms_floatingLabelColor="@color/colorAccent"
                    app:ms_floatingLabelText="@string/profession"
                    app:ms_hint="@string/promo"
                    app:ms_multiline="true"
                    android:spinnerMode="dropdown"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView19"
                    android:layout_margin="4dp"
                    android:layout_gravity="center"
                    android:src="@drawable/coordonnee_authentifiant" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/Authentifiant_registerlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/Authentifiant_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/authentifiant"
                        android:singleLine="true"
                        android:inputType="textPassword" />


                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/contour"
            android:text="@string/inscription"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/presence_compte"
            android:textColor="@color/gris"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginBottom="20dp" />

    </LinearLayout>
</ScrollView>
</LinearLayout>